# Project-SMILE

./: .env.docker.example  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.monitoring  README.md  alembic.ini  check_indices.py  first_encounter.md  launch-cli.bat  memory_categories.md  pyproject.toml  requirements.monitoring.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 724295c7c2d0_initial_event_system_setup.py
backend/app/: database.py  smile.py
backend/app/agents/: context.py  event_processor.py  memory.py  smile.py
backend/app/api/: events_routes.py  main.py  routers.py
backend/app/configs/: app_config.example.yaml  app_config.yaml  llm.yaml  llm_config.yaml  settings.py  tools_config.yaml
backend/app/models/: agents.py  event_store.py  events.py  memory.py  user.py
backend/app/monitoring/: main.py
backend/app/services/: embeddings.py  event_service.py  knowledge_search.py  neo4j.py  smile.py  twilio_receive.py
backend/app/services/neo4j/: __init__.py  driver.py  entities.py  memories.py  preferences.py  relationships.py  schema.py  summaries.py  users.py  utils.py  vectors.py
backend/app/tools/: custom_tools.py  public_tools.py
backend/app/tools/document/: __init__.py  save_document.py  search_documents.py
backend/app/tools/entity/: __init__.py  search_entities.py
backend/app/tools/knowledge/: __init__.py  search_knowledge.py
backend/app/tools/memory/: __init__.py  save_memory.py  search_memories.py
backend/app/tools/system/: __init__.py  system_tools.py
backend/app/utils/: cli.py  examples.py  llm.py  logger.py  state.py
backend/backend/: commit_message.txt
backend/examples/: cognitive_memory_examples.json  entity_extractor_examples.json  preference_extractor_examples.json  summary_examples.json
backend/livekit-plugin-smiles/: docker-compose.yml
backend/livekit-plugin-smiles/livekit_plugin_smiles/: llm.py
backend/smiles_chest/: Smiles_DEV_todo.txt
backend/smiles_chest/Cursor_AI_IDE/: README.txt
backend/smiles_chest/LangGraph/: README.txt
backend/smiles_chest/notes/: geolocation_note.md
backend/smiles_chest/souvenirs/: first_encounter.md
backend/smiles_chest/todo/: Costco_liste.json  Smiles_DEV_todo.json
backend/tests/: test_context_retrieval.py  test_llm_providers.py  test_memory_save.py  test_save_memory_tool.py
frontend/: Dockerfile  package-lock.json
frontend/smiles-ui/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/smiles-ui/app/: layout.tsx  page.tsx
frontend/smiles-ui/app/actions/: chat.ts
frontend/smiles-ui/app/admin/: page.tsx
frontend/smiles-ui/app/components/: ChatInput.tsx  ChatInterface.tsx  CloseIcon.tsx  MessageList.tsx  NoAgentNotification.tsx  Sidebar.tsx
frontend/smiles-ui/app/knowledge/: page.tsx
frontend/smiles-ui/app/voice/: page.tsx
scripts/: delete_old_checkpoints.sqlite3-query
(+1 files in other folders)
