[tool.poetry]
name = "src"
version = "0.1.0"
description = "Project SMILE backend app"
authors = ["Eric Lampron <elampron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langgraph = "^0.2.45"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic = {extras = ["email"], version = "^2.10.0"}
langsmith = {version = "^0.1.142", optional = true}
rich = "^13.9.4"
pydantic-settings = "^2.6.1"
langchain-community = "^0.3.5"
langchain-openai = "^0.2.6"
langchain-anthropic = "^0.2.4"
langgraph-checkpoint-sqlite = "^2.0.1"
langgraph-checkpoint-postgres = "^2.0.2"
psycopg = "^3.2.3"
twilio = "^9.3.7"
flask = "^3.1.0"
ngrok = "^1.4.0"
flask-ngrok = "^0.0.25"
pyngrok = "^7.2.1"
neo4j = "^5.26.0"
langmem = "^0.0.4"
aiosqlite = "^0.20.0"
ipython = "^8.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
