[tool.poetry]
name = "src"
version = "0.1.0"
description = "Project SMILE backend app"
authors = ["Eric Lampron <elampron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langgraph = "^0.2.45"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic = {extras = ["email"], version = "^2.10.0"}
langsmith = {version = "^0.1.142", optional = true}
rich = "^13.9.4"
pydantic-settings = "^2.6.1"
langchain-community = "^0.3.5"
langchain-openai = "^0.2.6"
langchain-anthropic = "^0.2.4"
langgraph-checkpoint-sqlite = "^2.0.1"
langgraph-checkpoint-postgres = "^2.0.2"
psycopg = "^3.2.3"
twilio = "^9.3.7"
flask = "^3.1.0"
ngrok = "^1.4.0"
flask-ngrok = "^0.0.25"
pyngrok = "^7.2.1"
neo4j = "^5.26.0"
aiosqlite = "^0.20.0"
ipython = "^8.29.0"
prometheus-client = "^0.21.0"
pygithub = "^2.5.0"
playwright = "^1.49.0"
lxml = "^5.3.0"
langchain-google-community = {extras = ["gmail"], version = "^2.0.3"}
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
email-validator = "^2.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.19"
langchain-xai = "^0.1.0"
google-genai = "^0.2.1"
langchain-google-genai = "^2.0.7"
langchain-groq = "^0.2.2"
langchain-ollama = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
